--- a/views/game/gamepage.ejs
+++ b/views/game/gamepage.ejs
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <title><%= title%> </title>
     <script src="/javascripts/phaser.js"></script>
+    <script src="/client/js/clientServices/tileKeyService.js"></script>
     <script src="/client/js/init.js"></script>
     <script src="/client/js/classes/bases/Base.js"></script>
     <script src="/client/js/states/boot.js"></script>
     <script src="/client/js/states/preload.js"></script>
     <script src="/client/js/states/main.js"></script>
     <script src="/client/js/classes/bases/MobileObject.js"></script>
-    <script src="/client/js/character.js"></script>
+    <script src="/client/js/classes/character.js"></script>
     <script src="/client/js/app.js"></script>
 </head>
 <body>
