Working on implementing click-to-move on the client

--- a/views/game/gamepage.ejs
+++ b/views/game/gamepage.ejs
@@ -6,6 +6,8 @@
     <!-- Libraries  -->
     <script src="/javascripts/phaser.js"></script>
     <script src="/javascripts/pathfinding-browser.js"></script>
+    <script src="/javascripts/bowser.js"></script>
+    <script src="/javascripts/object-clone.js"></script>
 
     <!-- Client-side services -->
     <script src="/client/js/clientServices/walkingService.js"></script>
