Working on the server-side. Login between character and chat is unified and players must login with a unique name. Next up is loading all tilemaps into memory on the server and parsing them for use with Pathfinding.js

--- a/views/game/gamepage.ejs
+++ b/views/game/gamepage.ejs
@@ -14,6 +14,7 @@
     <!-- Client-side services -->
     <script src="/client/js/clientServices/walkingService.js"></script>
     <script src="/client/js/clientServices/tileKeyService.js"></script>
+    <script src="/client/js/clientServices/clientCharacterService.js"></script>
 
     <!-- States -->
     <script src="/client/js/init.js"></script>
@@ -42,12 +43,12 @@
 <div id="gameView"></div>
 
 <div id="chatBox">
-    <div id="loginui">
+    <!--<div id="loginui">
         <label for="loginname">Choose a name for chat</label>
         <input id="loginname" type="text" name="loginname" />
         <button id="loginbutton">Login</button>
-    </div>
-    <div id="chatui" style="display: none;">
+    </div>-->
+    <div id="chatui">
         <textarea id="chatbox" rows="15" cols="48"></textarea><br>
         <input id="chatinput" type="text" name="chatinput" />
         <button id="sendchat">Send</button>
