Changed bower to be under /public to allow for static access

--- a/views/game/gamepage.ejs
+++ b/views/game/gamepage.ejs
@@ -4,11 +4,16 @@
     <meta charset="UTF-8">
     <title><%= title%> </title>
     <!-- Libraries  -->
-    <script src="/javascripts/phaser.js"></script>
+    <!--<script src="/javascripts/phaser.js"></script>
     <script src="/javascripts/pathfinding-browser.js"></script>
     <script src="/javascripts/bowser.js"></script>
     <script src="/javascripts/object-clone.js"></script>
-    <script src="/javascripts/jquery-2.1.4.js"></script>
+    <script src="/javascripts/jquery-2.1.4.js"></script>-->
+    <script src="/bower_components/phaser/build/phaser.js"></script>
+    <script src="/bower_components/bowser/bowser.js"></script>
+    <script src="/bower_components/pathfinding/pathfinding-browser.js"></script>
+    <script src="/bower_components/js-object-clone/object-clone.js"></script>
+    <script src="/bower_components/jquery/dist/jquery.js"></script>
     <script src="/socket.io/socket.io.js"></script>
 
     <!-- Client-side services -->
